cleaned up job logging and added time series db influxdb for storing logs per job
