# internal/rest/manager/manager.go
@@ -5,6 +5,7 @@ import (
 	"github.com/zebresel-com/mongodm"
 	"gitlab.strictlypaste.xyz/ko1n/dips/internal/amqp"
 	"gitlab.strictlypaste.xyz/ko1n/dips/internal/persistence/database/crud"
+	"gitlab.strictlypaste.xyz/ko1n/dips/internal/persistence/messages"
 )
 
 // TODO: this should be self-contained and not have a global state!
@@ -13,9 +14,12 @@ import (
 var pipelines crud.PipelineWrapper
 var jobs crud.JobWrapper
 
+var messageHandler messages.MessageHandler
+
 // amqp channels
 var sendPipelineExecute chan string
-var recvPipelineStatus chan string
+var recvJobStatus chan string
+var recvJobMessage chan string
 
 // SuccessResponse - reponse for a successful operation
 type SuccessResponse struct {
@@ -28,27 +32,39 @@ type FailureResponse struct {
 	Error  string `json:"error"`
 }
 
+// ManagerAPIConfig - config required to run a manager
+type ManagerAPIConfig struct {
+	Gin            *gin.Engine
+	AMQP           amqp.Config
+	MongoDB        *mongodm.Connection
+	MessageHandler messages.MessageHandler
+}
+
 // CreateManagerAPI - adds the manager api to a gin engine
-func CreateManagerAPI(r *gin.Engine, db *mongodm.Connection, mq amqp.Config) error {
-	// setup database
-	pipelines = crud.CreatePipelineWrapper(db)
-	jobs = crud.CreateJobWrapper(db)
+func CreateManagerAPI(conf ManagerAPIConfig) error {
+	// setup crud wrappers
+	pipelines = crud.CreatePipelineWrapper(conf.MongoDB)
+	jobs = crud.CreateJobWrapper(conf.MongoDB)
+
+	messageHandler = conf.MessageHandler
 
 	// setup amqp
-	client := amqp.Create(mq)
+	client := amqp.Create(conf.AMQP)
 	sendPipelineExecute = client.RegisterProducer("pipeline_execute")
-	recvPipelineStatus = client.RegisterConsumer("pipeline_status")
-	go recvJobStatus()
+	recvJobStatus = client.RegisterConsumer("job_status")
+	recvJobMessage = client.RegisterConsumer("job_message")
+	go handleJobStatus()
+	go handleJobMessage()
 	client.Start()
 
 	// setup rest routes
+	r := conf.Gin
+
 	r.POST("/manager/pipeline/", PipelineCreate)
 	r.GET("/manager/pipeline/all", PipelineList)
 	r.GET("/manager/pipeline/details/:pipeline_id", PipelineDetails)
 	r.PATCH("/manager/pipeline/:pipeline_id", PipelineUpdate)
 	r.DELETE("/manager/pipeline/:pipeline_id", PipelineDelete)
-	// TODO: PipelineUpdate
-	// TODO: PipelineDelete
 
 	r.POST("/manager/pipeline/execute/:pipeline_id", PipelineExecute)
 
